--- a/templates/contact_us.html
+++ b/templates/contact_us.html
@@ -3,19 +3,24 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-  	<title>Nice food restaurants</title>
-	<!--
-	<link href={{ url_for('static', filename='styles.css') }} rel=stylesheet>
-	-->
+  	<title>Nice food restaurants</title>	
+	<link href={{ url_for("static", filename="styles.css") }} 
+		  rel=stylesheet>
+	<link href={{url_for("static", filename ="eat_and_rest.png")}} 
+		  rel="icon">
 </head>
+
 <body>
 	<header>
-		<p>--- start of header ---</p>
 		<div class="vertical-centerer flex-container">
 		  	<div class="flex-container space-between header-content">
 				<div>
 			  		<span>
-						<img class="logo" src={{url_for('static', filename ="eat_and_rest.jpg")}} width="80" alt="Restaurants logo">
+						<img class="logo" 
+							 src={{url_for("static", filename ="eat_and_rest.jpg")}} 
+							 width="80" 
+							 height="80"
+							 alt="Restaurants logo">
 						<div class="logo_name">
 							<h2>Eat and Rest</h2>
 						</div>
@@ -30,7 +35,6 @@
 				</div>
 		  	</div>
 		</div>
-		<p>--- end of header ---</p>
 	</header>
 
 	<section>
@@ -40,10 +44,7 @@
 				<div class="item div_post">
 					<p>Russia, Kaluga, Kirova str, 57 office 3</p>
 					<p>tel: +7(4842)70-71-72</p>
-					
-					<iframe src="https://yandex.ru/map-widget/v1/?lang=ru_RU&amp;scroll=true&amp;um=constructor%3Adb2eb221f7d67dfc31a873e9eaca7dc9dca2fa4cd35e54879a5364b7ab3d9097" 
-							frameborder="0" allowfullscreen="true" width="50%" height="400px" style="display: block;"></iframe>
-					
+													
 					<p>Working schedule:</p>
 					<ul>
 						<li>Mo: 09:00 - 21:00</li>
@@ -54,6 +55,13 @@
 						<li>St: 09:00 - 15:00</li>
 						<li>Su: closed</li>
 					</ul>
+
+					<iframe src="https://yandex.ru/map-widget/v1/?lang=ru_RU&amp;scroll=true&amp;um=constructor%3Adb2eb221f7d67dfc31a873e9eaca7dc9dca2fa4cd35e54879a5364b7ab3d9097" 
+							frameborder="0" 
+							allowfullscreen="true" 
+							width="100%" 
+							height="400px" 
+							style="display: block;"></iframe>
 							
 				</div>
             </div>
@@ -61,31 +69,17 @@
 	</section>
 
 	<footer>
-		<p>--- start of footer ---</p>
 		<div class="vertical-centerer flex-container">
 		  	<div class="flex-container space-between header-content">
  				<div>
 			  		<ul class="menu">
-						<!--
-                        <li>
-							<a href="/restaurants">Back to restaurants</a>
-						</li>
-						<li>
-							<a href="/restaurants/menu_items/">Back to all menu items</a>
-						</li>
-						<li>Reserved</li>
 						<li> </li>
-						<li> </li>
-						<li> </li>
-						<li> </li>
-						<li> </li>
-						-->
 						<li><a href="/restaurants/contact_us">Contact us</a></li>
 			  		</ul>
 				</div>
 		  	</div>
 		</div>
-		<p>--- end of footer ---</p>
+
 	</footer>
 
 </body>
