--- a/templates/add_menu_item_to_restaurant_id.html
+++ b/templates/add_menu_item_to_restaurant_id.html
@@ -4,18 +4,24 @@
 <head>
 	<meta charset="utf-8">
   	<title>Nice food restaurants</title>
-	<!--
-	<link href={{ url_for('static', filename='styles.css') }} rel=stylesheet>
-	-->
+	<link href={{ url_for("static", filename="styles.css") }} 
+		  rel=stylesheet>
+	<link href={{url_for("static", filename ="eat_and_rest.png")}} 
+		  rel="icon">
 </head>
+
 <body>
 	<header>
-		<p>--- start of header ---</p>
+
 		<div class="vertical-centerer flex-container">
 		  	<div class="flex-container space-between header-content">
 				<div>
 			  		<span>
-						<img class="logo" src={{url_for('static', filename ="eat_and_rest.jpg")}} width="80" alt="Restaurants logo">
+						<img class="logo" 
+							 src={{url_for("static", filename ="eat_and_rest.jpg")}} 
+							 width="80" 
+							 height="80"
+							 alt="Restaurants logo">
 						<div class="logo_name">
 							<h2>Eat and Rest</h2>
 						</div>
@@ -30,68 +36,66 @@
 				</div>
 		  	</div>
 		</div>
-		<p>--- end of header ---</p>
+
 	</header>
 
 	<section>
 		<div class="container">
 			<div class="portfolio">
-				<form action="{{ url_for('add_menu_item_to_restaurant_id',
+				<form style="display: inline" 
+					  action="{{ url_for('add_menu_item_to_restaurant_id',
 								rst_id = 'rst_id' ~ rest.id,
-								mnu_id = 'mnu_id' ~ item.id)}}" method = 'post'>
+								mnu_id = 'mnu_id' ~ item.id)}}" 
+					   method="post">
 					<dl>						
-						<h2>{{item.name}}</h2>
-						<p>{{item.description}}</p>
-						<!--
-						<dt>Menu item:</dt>
-						<dd><input required type ='text' size='30' name='name'></dd>
-						-->
+						<h2>Input data for '{{ item.name }}'</h2>
+						<p>Descrition: {{ item.description }}</p>
+
 						<dt>Price:</dt>
-						<dd><input required type ='text' size='30' name='price'></dd>	
+						<dd><input required 
+								   type ="text" 
+								   size="5" 
+								   name="price"></dd>	
 					
 						<dt>Commnet:</dt>
-						<dd><input type ='text' size='30' name='comment'></dd>						
+						<dd><input type ="text" 
+								   size="40" 
+								   name="comment"></dd>						
 					</dl>
 		 
-					<input type='submit' name="add_button" value='Add item to restaurant'>
+					<input type="submit" 
+						   name="add_button" 
+						   value="Add item to restaurant">
 					<!--
-					<input type='submit' name="cancel_button" value='Cancel'>
+					<input type="submit" 
+						   name="cancel_button" 
+						   value="Cancel">
 					-->		 
 			  	</form>
 
-				<form action="{{ url_for('restaurant_id', rst_id = 'rst_id' ~ rest.id)}}" method = 'get'>
-					<input type='submit' value='Cancel'>
+				<form style="display: inline" 
+					  action="{{ url_for('restaurant_id', rst_id = 'rst_id' ~ rest.id)}}" 
+					  method = "get">
+					<input type="submit" 
+						   value="Cancel">
 				</form>
             </div>
 		</div>
 	</section>
 
 	<footer>
-		<p>--- start of footer ---</p>
+
 		<div class="vertical-centerer flex-container">
 		  	<div class="flex-container space-between header-content">
  				<div>
 			  		<ul class="menu">
-						<!--
-                        <li>
-							<a href="/restaurants/">Back to restaurants</a>
-						</li>
-						<li>
-							<a href="/restaurants/menu_items/">Back to all menu items</a>
-						</li>
-						<li>Reserved</li>
 						<li> </li>
-						<li> </li>
-						<li> </li>
-						<li> </li>
-						<li> </li>
-						-->
 						<li><a href="/restaurants/contact_us">Contact us</a></li>
 			  		</ul>
 				</div>
 		  	</div>
 		</div>
-		<p>--- end of footer ---</p>
+
 	</footer>
 
 </body>
