--- a/templates/delete_menu_item_for_restaurant_id.html
+++ b/templates/delete_menu_item_for_restaurant_id.html
@@ -4,18 +4,24 @@
 <head>
 	<meta charset="utf-8">
   	<title>Nice food restaurants</title>
-	<!--
-	<link href={{ url_for('static', filename='styles.css') }} rel=stylesheet>
-	-->
+	<link href={{ url_for("static", filename="styles.css") }} 
+		  rel=stylesheet>
+	<link href={{url_for("static", filename ="eat_and_rest.png")}} 
+		  rel="icon">
 </head>
+
 <body>
 	<header>
-		<p>--- start of header ---</p>
+
 		<div class="vertical-centerer flex-container">
 		  	<div class="flex-container space-between header-content">
 				<div>
 			  		<span>
-						<img class="logo" src={{url_for('static', filename ="eat_and_rest.jpg")}} width="80" alt="Restaurants logo">
+						<img class="logo" 
+							 src={{url_for("static", filename ="eat_and_rest.jpg")}} 
+							 width="80" 
+							 height="80"
+							 alt="Restaurants logo">
 						<div class="logo_name">
 							<h2>Eat and Rest</h2>
 						</div>
@@ -30,52 +36,44 @@
 				</div>
 		  	</div>
 		</div>
-		<p>--- end of header ---</p>
+
 	</header>
 
 	<section>
 		<div class="container">
 			<div class="portfolio">
-				<h1>{{item.name}}</h1>
-				<p>'{{item.name}}' will be deleted from restaurant '{{rest.name}}'. </p>
-				<h3> Are you sure you want to delete? </h3>
+				<h2>Delete '{{item.name}}':</h2>
+				<p>Item '{{item.name}}' will be deleted from restaurant '{{ rest.name }}'. </p>
+				<h3 class="reject_red"> Are you sure you want to delete? </h3>
 				
      			<form action="{{ url_for('delete_menu_item_for_restaurant_id', 
 								rst_id = 'rst_id' ~ rest.id,
-								mnu_id = 'mnu_id' ~ item.id)}}" method = 'post'>
-					<input type='submit' name="delete_button" value='Delete menu item'>
-					<input type='submit' name="cancel_button" value='Cancel'>
+								mnu_id = 'mnu_id' ~ item.id)}}" 
+					  method="post">
+					<input type="submit" 
+						   name="delete_button" 
+						   value="Delete menu item">
+					<input type="submit" 
+						   name="cancel_button" 
+						   value="Cancel">
      			</form>
             </div>
 		</div>
 	</section>
 
 	<footer>
-		<p>--- start of footer ---</p>
+		
 		<div class="vertical-centerer flex-container">
 		  	<div class="flex-container space-between header-content">
  				<div>
 			  		<ul class="menu">
-						<!--
-                        <li>
-							<a href="/restaurants/">Back to restaurants</a>
-						</li>
-						<li>
-							<a href="/restaurants/menu_items/">Back to all menu items</a>
-						</li>
-						<li>Reserved</li>
 						<li> </li>
-						<li> </li>
-						<li> </li>
-						<li> </li>
-						<li> </li>
-						-->
 						<li><a href="/restaurants/contact_us">Contact us</a></li>
 			  		</ul>
 				</div>
 		  	</div>
 		</div>
-		<p>--- end of footer ---</p>
+
 	</footer>
 
 </body>
