--- a/templates/delete_restaurant_id.html
+++ b/templates/delete_restaurant_id.html
@@ -4,18 +4,23 @@
 <head>
 	<meta charset="utf-8">
   	<title>Nice food restaurants</title>
-	<!--
-	<link href={{ url_for('static', filename='styles.css') }} rel=stylesheet>
-	-->
+	<link href={{ url_for("static", filename="styles.css") }} 
+		  rel=stylesheet>
+	<link href={{url_for("static", filename ="eat_and_rest.png")}} 
+		  rel="icon">
 </head>
+
 <body>
 	<header>
-		<p>--- start of header ---</p>
 		<div class="vertical-centerer flex-container">
 		  	<div class="flex-container space-between header-content">
 				<div>
 			  		<span>
-						<img class="logo" src={{url_for('static', filename ="eat_and_rest.jpg")}} width="80" alt="Restaurants logo">
+						<img class="logo" 
+							 src={{url_for("static", filename ="eat_and_rest.jpg")}} 
+							 width="80" 
+							 height="80"
+							 alt="Restaurants logo">
 						<div class="logo_name">
 							<h2>Eat and Rest</h2>
 						</div>
@@ -30,55 +35,50 @@
 				</div>
 		  	</div>
 		</div>
-		<p>--- end of header ---</p>
+
 	</header>
 
 	<section>
 		<div class="container">
 			<div class="portfolio">
-				<h1>{{rest.name}}</h1>
+				<h2>Delete {{ rest.name }}: </h2>
 				{% if mnu_itms_qnt %}
-					<p>'{{rest.name}}' serves {{mnu_itms_qnt}} menu items: </p>
-					<h3> Are you sure you want to delete '{{rest.name}}' and its menu? </h3>
+					<p>Restaurant '{{ rest.name }}' serves {{ mnu_itms_qnt | length }} menu items: </p>
+					{% for (id, name) in mnu_itms_qnt %}
+						<p class="support_italic"> - {{ name }}</p>
+					{% endfor %}
+					<h3 class="reject_red"> Are you sure you want to delete '{{ rest.name }}' and its menu? </h3>
 				{% else %}
-					<p>'{{rest.name}}' will be deleted from list of restaurants. </p>
-					<h3> Are you sure you want to delete '{{rest.name}}'? </h3>
+					<p>'{{ rest.name }}' will be deleted from list of restaurants. </p>
+					<h3> Are you sure you want to delete '{{ rest.name }}'? </h3>
 				{% endif %}
 				
-     			<form action="{{ url_for('delete_restaurant_id', rst_id = 'rst_id' ~ rest.id)}}" method = 'post'>
-					<input type='submit' name="delete_button" value='Delete restaurant'>
-					<input type='submit' name="cancel_button" value='Cancel'>
+     			<form action="{{ url_for('delete_restaurant_id', rst_id = 'rst_id' ~ rest.id)}}" 
+					  method="post">
+					<input type="submit" 
+						   name="delete_button" 
+						   value="Delete restaurant">
+					<input type="submit" 
+						   name="cancel_button" 
+						   value="Cancel">
      			</form>
             </div>
 		</div>
 	</section>
 
 	<footer>
-		<p>--- start of footer ---</p>
+
 		<div class="vertical-centerer flex-container">
 		  	<div class="flex-container space-between header-content">
  				<div>
 			  		<ul class="menu">
-						<!--
-                        <li>
-							<a href="/restaurants/">Back to restaurants</a>
-						</li>
-						<li>
-							<a href="/restaurants/menu_items/">Back to all menu items</a>
-						</li>
-						<li>Reserved</li>
 						<li> </li>
-						<li> </li>
-						<li> </li>
-						<li> </li>
-						<li> </li>
-						-->
 						<li><a href="/restaurants/contact_us">Contact us</a></li>
 			  		</ul>
 				</div>
 		  	</div>
 		</div>
-		<p>--- end of footer ---</p>
+
 	</footer>
 
 </body>
