--- a/templates/edit_menu_item_for_restaurant_id.html
+++ b/templates/edit_menu_item_for_restaurant_id.html
@@ -4,18 +4,23 @@
 <head>
 	<meta charset="utf-8">
   	<title>Nice food restaurants</title>
-	<!--
-	<link href={{ url_for('static', filename='styles.css') }} rel=stylesheet>
-	-->
+	<link href={{ url_for("static", filename="styles.css") }}
+		  rel=stylesheet>
+	<link href={{url_for("static", filename ="eat_and_rest.png")}} 
+		  rel="icon">
 </head>
+
 <body>
-	<header>
-		<p>--- start of header ---</p>
+
 		<div class="vertical-centerer flex-container">
 		  	<div class="flex-container space-between header-content">
 				<div>
 			  		<span>
-						<img class="logo" src={{url_for('static', filename ="eat_and_rest.jpg")}} width="80" alt="Restaurants logo">
+						<img class="logo" 
+							 src={{url_for("static", filename ="eat_and_rest.jpg")}} 
+							 width="80" 
+							 height="80"
+							 alt="Restaurants logo">
 						<div class="logo_name">
 							<h2>Eat and Rest</h2>
 						</div>
@@ -30,7 +35,7 @@
 				</div>
 		  	</div>
 		</div>
-		<p>--- end of header ---</p>
+
 	</header>
 
 	<section>
@@ -38,54 +43,49 @@
 			<div class="portfolio">
 				<form action="{{ url_for('edit_menu_item_for_restaurant_id',
 								rst_id = 'rst_id' ~ rest.id,
-								mnu_id = 'mnu_id' ~ item.id)}}" method = 'post'>
+								mnu_id = 'mnu_id' ~ item.id)}}" 
+					  method = 'post'>
 					<dl>						
-						<h2>{{item.name}}</h2>
-						<p>{{item.description}}</p>
-						<!--
-						<dt>Menu item:</dt>
-						<dd><input required type ='text' size='30' name='name'></dd>
-						-->
+						<h2>Change data fields for '{{ item.name }}'</h2>
+						<p>Description: {{ item.description }}</p>
+						
 						<dt>Price:</dt>
-						<dd><input type ='text' size='30' name='price' placeholder='{{rest_item.price}}'></dd>	
+						<dd><input type ="text" 
+								   size="5" 
+								   name="price" 
+								   placeholder="{{rest_item.price}}"></dd>	
 					
 						<dt>Commnet:</dt>
-						<dd><input type ='text' size='30' name='comment' placeholder='{{rest_item.comment}}'></dd>						
+						<dd><input type ="text" 
+								   size="40" 
+								   name="comment" 
+								   placeholder="{{rest_item.comment}}"></dd>						
 					</dl>
 		 
-					<input type='submit' name="submit_button" value='Submit changes'>
-					<input type='submit' name="cancel_button" value='Cancel'>	 
+					<input type="submit" 
+						   name="submit_button" 
+						   value="Submit changes">
+					<input type="submit" 
+						   name="cancel_button" 
+						   value="Cancel">	 
 			  	</form>				
             </div>
 		</div>
 	</section>
 
 	<footer>
-		<p>--- start of footer ---</p>
+
 		<div class="vertical-centerer flex-container">
 		  	<div class="flex-container space-between header-content">
  				<div>
 			  		<ul class="menu">
-						<!--
-                        <li>
-							<a href="/restaurants/">Back to restaurants</a>
-						</li>
-						<li>
-							<a href="/restaurants/menu_items/">Back to all menu items</a>
-						</li>
-						<li>Reserved</li>
 						<li> </li>
-						<li> </li>
-						<li> </li>
-						<li> </li>
-						<li> </li>
-						-->
 						<li><a href="/restaurants/contact_us">Contact us</a></li>
 			  		</ul>
 				</div>
 		  	</div>
 		</div>
-		<p>--- end of footer ---</p>
+
 	</footer>
 
 </body>
