--- a/templates/menu_item_id.html
+++ b/templates/menu_item_id.html
@@ -4,18 +4,24 @@
 <head>
 	<meta charset="utf-8">
   	<title>Nice food restaurants</title>
-	<!--
-	<link href={{ url_for('static', filename='styles.css') }} rel=stylesheet>
-	-->
-</head>
+	<link href={{ url_for("static", filename="styles.css") }} 
+	  	  rel=stylesheet>
+	<link href={{url_for("static", filename ="eat_and_rest.png")}} 
+			rel="icon">
+  </head>
+
 <body>
 	<header>
-		<p>--- start of header ---</p>
+
 		<div class="vertical-centerer flex-container">
 		  	<div class="flex-container space-between header-content">
 				<div>
 			  		<span>
-						<img class="logo" src={{url_for('static', filename ="eat_and_rest.jpg")}} width="80" alt="Restaurants logo">
+						<img class="logo" 
+							 src={{url_for("static", filename ="eat_and_rest.jpg")}} 
+							 width="80" 
+							 height="80"
+							 alt="Restaurants logo">
 						<div class="logo_name">
 							<h2>Eat and Rest</h2>
 						</div>
@@ -30,87 +36,73 @@
 				</div>
 		  	</div>
 		</div>
-		<p>--- end of header ---</p>
+
 	</header>
 
 	<section>
 		<div class="container">
 			<div class="portfolio">
-				<h1>{{menu_item.name}}</h1>
-                <p> 
-					<span> Description: {{menu_item.description}} </span>
-				</p>
-				<p> Cource: {{menu_item.course}} </p>
-				{% if menu_item.weight %}
-					<p> Dish weight: {{menu_item.weight}} gr.</p>
-				{% endif %}
-				{% if menu_item.content %}
-					<p> Content: {{menu_item.content}} </p>
-				{% endif %}
-				<h4>
-					<!--
-					<a href="/restaurants/menu_items/mnu_id{{menu_item.id}}/edit">Edit {{menu_item.name}} info</a>
-					<br>
-					<a href="/restaurants/menu_items/mnu_id{{menu_item.id}}/delete">Delete {{menu_item.name}} from all restaurants</a>
-					{% if rest_item %}						
-						<a href="/restaurants/rst_id{{rest_item.id}}/">Back to {{rest_item.name}}</a>
-					{% else %}
-						<a href="/restaurants/menu_items/">Back to all menu items</a>
-					{% endif %}				
-					-->
+				<div class="item div_post">
+					<h1>{{ menu_item.name }}</h1>
+					<p class="item_menu_span"> Description: {{ menu_item.description }} </p>
+
+					<p> Cource: {{ menu_item.course }} </p>
+					{% if menu_item.weight %}
+						<p> Dish weight: {{ menu_item.weight }} gr.</p>
+					{% endif %}
+					{% if menu_item.content %}
+						<p class="support_italic"> Content: {{ menu_item.content }} </p>
+					{% endif %}
+				</div>
+				<div>
+					<!-- form to load edit menu item form -->
+					<form style="display: inline" 
+						  action="{{ url_for('edit_menu_item_id', mnu_id = 'mnu_id' ~ menu_item.id)}}" 
+						  method="get">
+						<input type="submit" 
+						 	   value="Edit item">
+					</form>
+					<!-- form to load delete menu item form -->
+					<form style="display: inline"
+					  	  action="{{ url_for('delete_menu_item_id', mnu_id = 'mnu_id' ~ menu_item.id)}}"
+						  method="get">
+						<input type="submit" 
+							   value="Delete item">
+					</form>
 
 					<!-- form to load previous page -->
 					{% if rest_item %}	
-						<form action="{{ url_for('restaurant_id', rst_id = 'rst_id' ~ rest_item.id)}}" method = 'get'>
-							<input type='submit' value="Back to '{{rest_item.name}}'">
+						<form action="{{ url_for('restaurant_id', rst_id = 'rst_id' ~ rest_item.id)}}" 
+							  method="get">
+							<input type="submit" 
+								   value="Back to '{{rest_item.name}}'">
 						</form>
 					{% else %}
-						<form action="{{ url_for('menu_items')}}" method = 'get'>
-							<input type='submit' value="Back to all menu items">
+						<form action="{{ url_for('menu_items')}}" 
+							  method="get">
+							<input type="submit" 
+								   value="Back to all menu items">
 						</form>
 					{% endif %}	
-
-					<!-- form to load edit menu item form -->
-					<form action="{{ url_for('edit_menu_item_id', mnu_id = 'mnu_id' ~ menu_item.id)}}" method = 'get'>
-						<input type='submit' value="Edit item">
-					</form>
-					<!-- form to load delete menu item form -->
-					<form action="{{ url_for('delete_menu_item_id', mnu_id = 'mnu_id' ~ menu_item.id)}}" method = 'get'>
-						<input type='submit' value="Delete item">
-					</form>
-					<br>
-					
-				</h4> 
+					<br>					
+				</div> 
             </div>
 		</div>
 	</section>
 
 	<footer>
-		<p>--- start of footer ---</p>
+
 		<div class="vertical-centerer flex-container">
 		  	<div class="flex-container space-between header-content">
  				<div>
 			  		<ul class="menu">
-						<!--
-                        <li>
-							<a href="/restaurants/">Back to restaurants</a>
-						</li>
-						<li>
-							<a href="/restaurants/menu_items/">Back to all menu items</a>
-						</li>
-						<li>Reserved</li>
 						<li> </li>
-						<li> </li>
-						<li> </li>
-						<li> </li>
-						<li> </li>
-						-->
 						<li><a href="/restaurants/contact_us">Contact us</a></li>
 			  		</ul>
 				</div>
 		  	</div>
 		</div>
-		<p>--- end of footer ---</p>
+
 	</footer>
 
 </body>
