--- a/templates/delete_menu_item_id.html
+++ b/templates/delete_menu_item_id.html
@@ -59,7 +59,7 @@
 					  method = 'post'>
 					<input type="submit" 
 						   name="delete_button" 
-						   value="Delete menu item">
+						   value="Delete item">
 					<input type="submit" 
 						   name="cancel_button" 
 						   value="Cancel">
