--- a/templates/delete_restaurant_id.html
+++ b/templates/delete_restaurant_id.html
@@ -50,7 +50,7 @@
 					<h3 class="reject_red"> Are you sure you want to delete '{{ rest.name }}' and its menu? </h3>
 				{% else %}
 					<p>'{{ rest.name }}' will be deleted from list of restaurants. </p>
-					<h3> Are you sure you want to delete '{{ rest.name }}'? </h3>
+					<h3 class="reject_red"> Are you sure you want to delete '{{ rest.name }}'? </h3>
 				{% endif %}
 				
      			<form action="{{ url_for('delete_restaurant_id', rst_id = 'rst_id' ~ rest.id)}}" 
