Step 8.2 (upload function and hosting run)
added: form to select and method to upload logo files
       folder: static/logos,
       format: logo_rest_idN, N=id
       (solved issue 2)
updated: *logo filename moved to Restaurant attribut =>
           - possible to set different images types
           - no logo missing if change restaurant name (solved issue 3)
         * changed template (way of links) to logo files (more simple)
         * if delete restaurant - log file deleted also (solved issue 4)
         * README.txt file with current status
         * .gitignore, added path 'static/logos'
fixed: * all path in webserver_flask and database_setup
         setting/merging are done via os.path (more correct)
       * added loop to recover logonames in records after DB reset
removed: all logos from repo

--- a/templates/news_promo.html
+++ b/templates/news_promo.html
@@ -47,8 +47,8 @@
 				<!--<div class="item div_post">-->
 					{% if promo_lst %}
 						{% set ns = namespace(prev_rest_id = None) %}						
-						{% for (item, logo_name) in promo_lst %}    
-							{% set (rest_name, mnu_name, price, comment, rest_id) = item %}
+						{% for item in promo_lst %}    
+							{% set (rest_name, mnu_name, price, comment, rest_id, logoname) = item %}
 							
 							{% if rest_id != ns.prev_rest_id %}
 								{% if ns.prev_rest_id != None %}
@@ -59,7 +59,12 @@
 								{% endif %}	
 
 								<div class="item div_post">
-									<img src={{url_for("static", filename = logo_name)}}
+									{% if logoname %}
+										{% set logo_filename="logos/" ~ logoname %}
+									{% else %}
+										{% set logo_filename="no_image.jpg" %}
+									{% endif %}	
+									<img src={{url_for("static", filename = logo_filename)}}
 										 width="160" 
 										 height="160" 
 										 alt="Restaurant logo">
