--- a/templates/restaurants.html
+++ b/templates/restaurants.html
@@ -55,10 +55,18 @@
 				<!--end flashing-->
 				<h2>Our restaurants</h2>
                 {% if rest_items %}
-					{% for (item, logo_name) in rest_items %}
+					{% for item in rest_items %}
 						<div class="item div_post">
-							<a href="/restaurants/rst_id{{ item.id }}">
-								<img src={{url_for("static", filename = logo_name )}} width="260" height="260" alt="Restaurant logo">
+							<a href="/restaurants/rst_id{{ item.id }}">		
+								{% if item.logoname %}
+									{% set logo_filename="logos/" ~ item.logoname %}
+								{% else %}
+									{% set logo_filename="no_image.jpg" %}
+								{% endif %}	
+								<img src={{ url_for("static", filename=logo_filename )}}
+									 width="260" 
+									 height="260" 
+									 alt="Restaurant logo">							
 							</a>
 							<h2> {{ item.name }} </h2>
 							<span class="item_span"> {{ item.description }} </span>
